--- a/package.json
+++ b/package.json
@@ -28,5 +28,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "@nathius262/nexusjs": "^0.0.20",
+    "i": "^0.3.7",
+    "npm": "^11.6.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "sqlite3": "^5.1.7"
   }
 }
